SALG-931: Added permissions

--- a/config/sync/user.role.editor.yml
+++ b/config/sync/user.role.editor.yml
@@ -12,6 +12,7 @@ permissions:
   - 'access cfia settings'
   - 'access content overview'
   - 'access contextual links'
+  - 'access editor'
   - 'access files overview'
   - 'access in-place editing'
   - 'access own h5p results'
@@ -44,6 +45,7 @@ permissions:
   - 'edit terms in location'
   - 'embed all h5ps'
   - 'embed own h5ps'
+  - 'install recommended h5p libraries'
   - 'translate interface'
   - 'update h5p libraries'
   - 'use text format filtered_html'
